# hector_teleop

./: .gitignore  README.md
hector_joy_mode_switcher/: CMakeLists.txt  package.xml
hector_joy_mode_switcher/launch/: mode_switcher.launch  topic_mode_switcher.launch
hector_joy_mode_switcher/scripts/: joy_topic_switcher_node.py  mode_switcher_node.py
hector_joy_tcp_teleop/: CMakeLists.txt  package.xml  ros_control_plugins.xml
hector_joy_tcp_teleop/config/: controllers.yaml  xbox_controller.yaml
hector_joy_tcp_teleop/include/hector_joy_tcp_teleop/: joy_tcp_controller.h
hector_joy_tcp_teleop/include/hector_joy_tcp_teleop/controller_mapping/: axis_mapper.h  button_axis_mapper.h  button_mapper.h  controller_mapper_base.h  controller_mapper_factory.h  dual_axis_mapper.h
hector_joy_tcp_teleop/launch/: joy_to_tcp_twist_controller.launch
hector_joy_tcp_teleop/src/: joy_tcp_controller.cpp
hector_joy_tcp_teleop/src/controller_mapping/: axis_mapper.cpp  button_axis_mapper.cpp  button_mapper.cpp  controller_mapper_base.cpp  dual_axis_mapper.cpp
hector_joy_teleop/: CMakeLists.txt  package.xml
hector_joy_teleop/config/: common.yaml  logitech_gamepad.yaml  logitech_gamepad_sk.yaml  logitech_gamepad_sk_f310_wired.yaml
hector_joy_teleop/launch/: joy_teleop.launch  joystick.launch  logitech.launch  logitech_f310_wired.launch
hector_joy_teleop/scripts/: republisher
hector_joy_teleop/src/: joy_teleop.cpp
hector_joy_teleop/src/hector_joy_teleop/: joy_teleop.cpp
hector_joy_teleop_plugin/: CMakeLists.txt  README.md  package.xml
hector_joy_teleop_plugin/config/plugins/: drive_common.yaml  drive_mapping_logitech_f710.yaml
hector_joy_teleop_plugin/include/hector_joy_teleop_plugin/: joy_teleop_plugin.h  plugin_base.h
hector_joy_teleop_plugin/include/hector_joy_teleop_plugin/plugins/: drive_plugin.h  sensorhead_plugin.h
hector_joy_teleop_plugin/launch/: logitech_f710.launch
hector_joy_teleop_plugin/src/: joy_teleop_plugin.cpp  joy_teleop_plugin_node.cpp  plugin_base.cpp
hector_joy_teleop_plugin/src/plugins/: drive_plugin.cpp  sensorhead_plugin.cpp
hector_joy_teleop_plugin_interface/: CMakeLists.txt  package.xml
hector_joy_teleop_plugin_interface/include/hector_joy_teleop_plugin_interface/: teleop_base.h
hector_joy_teleop_plugin_interface/src/: teleop_base.cpp
hector_joy_teleop_plugin_msg/: CMakeLists.txt  package.xml
hector_joy_teleop_plugin_msg/srv/: LoadTeleopPlugin.srv
hector_joy_teleop_plugins/: CMakeLists.txt  README.md  package.xml  teleop_plugins.xml
hector_joy_teleop_plugins/config/: empty_mapping_logitech_f710.yaml  empty_mapping_steelseries_stratus_duo.yaml
hector_joy_teleop_plugins/config/behavior/: behavior_mapping_flipper_poses_logitech_f710.yaml  behavior_mapping_flipper_poses_steelseries_stratus_duo_telemax.yaml  behavior_mapping_logitech_f710.yaml  behavior_mapping_man_poses_logitech_f710.yaml  behavior_mapping_man_poses_logitech_f710_asterix.yaml  behavior_mapping_man_poses_steelseries_stratus_duo_telemax copy.yaml
hector_joy_teleop_plugins/config/drive/: drive_anymal.yaml  drive_asterix.yaml  drive_common.yaml  drive_ec_scout.yaml  drive_mapping_logitech_f710.yaml  drive_mapping_steelseries_stratus_duo.yaml  drive_telemax.yaml
hector_joy_teleop_plugins/config/flipper/: flipper_asterix.yaml  flipper_common.yaml  flipper_mapping_logitech_f710.yaml  flipper_mapping_steelseries_stratus_duo.yaml  flipper_telemax.yaml
hector_joy_teleop_plugins/config/image_projection/: image_projection_common.yaml  image_projection_mapping_logitech_f710.yaml  image_projection_mapping_steelseries_stratus_duo.yaml
hector_joy_teleop_plugins/config/manipulator/: manipulator_asterix.yaml  manipulator_common.yaml  manipulator_mapping_logitech_f710.yaml  manipulator_mapping_steelseries_stratus_duo.yaml  manipulator_telemax.yaml
hector_joy_teleop_plugins/config/profile/: profile_anymal.yaml  profile_asterix.yaml  profile_common.yaml  profile_mapping_logitech_f710.yaml  profile_mapping_steelseries_stratus_duo.yaml  profile_telemax.yaml  profile_telemax_steelseries_stratus_duo.yaml
hector_joy_teleop_plugins/config/properties/: properties_common.yaml  properties_mapping_logitech_f710.yaml  properties_mapping_steelseries_stratus_duo.yaml
hector_joy_teleop_plugins/config/sensorhead/: sensorhead_anymal.yaml  sensorhead_common.yaml  sensorhead_ec_scout.yaml  sensorhead_mapping_logitech_f710.yaml  sensorhead_mapping_steelseries_stratus_duo.yaml
hector_joy_teleop_plugins/include/hector_joy_teleop_plugins/: behavior_teleop.h  change_profile.h  common.h  controller_helper.h  drive_teleop.h  flipper_teleop.h  image_projection_teleop.h  manage_properties.h  manipulator_teleop.h  sensorhead_teleop.h
hector_joy_teleop_plugins/src/: behavior_teleop.cpp  change_profile.cpp  common.cpp  controller_helper.cpp  drive_teleop.cpp  flipper_teleop.cpp  image_projection_teleop.cpp  manage_properties.cpp  manipulator_teleop.cpp  sensorhead_teleop.cpp
hector_joy_teleop_plugins/srv/: SetProperty.srv
hector_joy_teleop_with_plugins/: 50.export.controller.config.bash.em  CMakeLists.txt  README.md  package.xml
hector_joy_teleop_with_plugins/config/: asterix.yaml  asterix_plugins.yaml  ec_scout_plugins.yaml  f710.yaml  steelseries_stratus_duo.yaml  telemax.yaml  telemax_plugins.yaml
hector_joy_teleop_with_plugins/include/hector_joy_teleop_with_plugins/: joy_teleop.h
hector_joy_teleop_with_plugins/launch/: control_delay.launch  logitech_f710.launch  logitech_f710_anymal.launch  logitech_f710_asterix.launch  logitech_f710_ec_scout.launch  logitech_f710_no_flipper.launch  logitech_f710_telemax.launch  steelseries_stratus_duo_telemax.launch
hector_joy_teleop_with_plugins/src/: joy_teleop.cpp  joy_teleop_node.cpp
hector_joy_teleop_with_plugins/srv/: LoadTeleopPlugin.srv
